@@ -1,5 +1,7 @@
 2009-06-27  higepon  <higepon@users.sourceforge.jp>
 
+        * FFIProcedures.cpp : Added pointer? and pointer->integer procedure. 
+
         * FFI.h : Added Pointer class for new FFI.
 
 2009-06-26  higepon  <higepon@users.sourceforge.jp>
